--- a/b1/b1_ktr.html
+++ b/b1/b1_ktr.html
@@ -70,7 +70,7 @@
     function cauD(){
         let a = parseInt(document.getElementById("valueA_d").value);
             let tk;
-            tk = parseInt((a/100)-1);
+            tk = parseInt((a/100)+1);
             document.getElementById("dispalyD").innerHTML= "Nam"+a+"thuoc the ki "+tk;
     }
     function cauE() {
